# pdf-reader-translate

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
backend/: .gitignore  backend.spec  requirements.txt  start.py
backend/app/: main.py
backend/app/api/: overlay_trans.py  pdf_annot.py  pdf_edit.py  pdf_trans.py  structtrans.py  summary.py  translate.py
backend/app/models/: schemas.py
backend/app/services/: edit_service.py  file_utils.py  llm.py  pdf_annot_service.py  pdf_edit_service.py  pdf_service.py  structtrans_service.py  task_manager.py
scripts/: build-backend.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AnnotationLayer.tsx  AnnotationToolbar.tsx  EditLayer.tsx  EditToolbar.tsx  FullTranslate.tsx  OverlayTranslate.tsx  PDFViewer.tsx  PageThumbnails.tsx  PdfAnnotator.tsx  PdfEditor.tsx  Settings.tsx  Splitter.tsx  StructTranslate.tsx  Summary.tsx  TabBar.tsx  TextTranslate.tsx  TranslationPanel.tsx
src/services/: annotStash.ts  annotate.ts  api.ts  editApi.ts  pdf.ts
src/store/: useAnnotations.ts  useEditStore.ts  useSettings.ts
src/types/: editTypes.ts  index.ts
