[package]
name = "pdf-reader-translate"
version = "0.1.0"
description = "PDF 阅读翻译工具"
authors = ["you"]
edition = "2021"

[lib]
name = "pdf_reader_translate_lib"
crate-type = ["rlib"]

[[bin]]
name = "pdf-reader-translate"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
